--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,9 @@
     <color name="Blue_Dress">#157DEC</color>
     <color name="product_behind">#007DFF</color>
     <color name="product_name_behind_color">#03236B</color>
+    <color name="grocery_back_color">#B3D8FF</color>
+    <color name="light_gray">#707070</color>
+    <color name="green">#3DBA42</color>
 
     <color name="red">#FF0000</color>
     <color name="lineColor">#B8B8B8</color>
