--- a/app/src/main/res/layout/activity_all_vendors.xml
+++ b/app/src/main/res/layout/activity_all_vendors.xml
@@ -4,21 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllVendors">
+    tools:context=".Grocery.GroceryAllActivity.AllVendors">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="65dp"
+        android:gravity="center_vertical"
+        android:weightSum="12"
         android:id="@+id/linerLayout1"
         android:background="@drawable/gradient_color_half">
 
         <ImageView
+            android:layout_width="40dp"
+            android:layout_height="32dp"
+            android:layout_weight="2"
+            android:id="@+id/backPress"
+            android:src="@drawable/white_back_arrow"/>
+
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/backPress"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/white_back_arrow"/>
+            android:textColor="@color/white"
+            android:layout_weight="4"
+            android:id="@+id/subCatTitle"
+            android:text="Fruits and Vegetables"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="4"
+            android:layout_marginRight="10dp">
+
+
+            <ImageView
+                android:id="@+id/img_noti"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_baseline_shopping_bag_24"
+                app:tint="@color/white" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circle_black"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:padding="0dp"
+                android:text="10"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                android:textStyle="bold"/>
+
+
+
+        </RelativeLayout>
+
+
+
+
+
+
     </LinearLayout>
 
 
