--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -2,29 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     tools:context=".ProfileActivity"
     android:layout_height="match_parent">
 
 
- <androidx.appcompat.widget.Toolbar
-     android:layout_width="match_parent"
-     android:id="@+id/toolbar_main"
-     android:layout_height="wrap_content"
-     android:background="@color/primary">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:id="@+id/linerLayout1"
+        android:background="@drawable/gradient_color_half">
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="32dp"
+        android:id="@+id/backPressImage"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/white_back_arrow"/>
 
-     <TextView
-         android:layout_width="30dp"
-         android:layout_height="30dp"
-         android:layout_marginStart="10dp"
-         android:drawableLeft="@drawable/white_back_arrow"
-         android:id="@+id/backPress"/>
-
-
-
- </androidx.appcompat.widget.Toolbar>
+    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
